# Sprevio-Graphql

./: Cargo.toml  schema.graphqls
src/: database.rs  main.rs
src/graphql/: mod.rs
src/graphql/auth/: mod.rs  signup.rs
src/graphql/expenses/: query.rs
src/graphql/images/: mod.rs
src/graphql/provider/: mutation.rs  query.rs
src/types/: auth.rs  expense.rs  mod.rs  provider.rs
